# shu

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html  mkdocs.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: actual_ecoli.json  flux_kcat.metabolism.json  hand_ecoli_map.json
docs/: .buildinfo  404.html  _rediraffe_redirected.json  developers.html  developers.md  file_formats.html  file_formats.md  gallery.md  genindex.html  index.html  index.md  objects.inv  plotting.html  plotting.md  search.html  searchindex.js  sitemap.xml
docs/_sources/: developers.rst.txt  file_formats.rst.txt  index.rst.txt  map.rst.txt  plotting.rst.txt
docs/assets/: gallery.css  gallery.js
docs/developers/: index.html
docs/file_formats/: index.html
docs/gallery/: index.html
docs/plotting/: index.html
docs/search/: search_index.json
docs/source/: conf.py  index.rst  map.rst  plotting.rst
ggshu/: README.md  README.rst  pyproject.toml
ggshu/ggshu/: __init__.py  aes.py  geoms.py  ggdata.py  jupyter.py
ggshu/tests/: conftest.py  test_ggdata.py  test_ggshu.py  test_write.py
pkg/: shu.d.ts  shu.js  shu_bg.wasm.d.ts
src/: aesthetics.rs  cli.rs  data.rs  escher.rs  extra_egui.rs  funcplot.rs  geom.rs  gui.rs  info.rs  legend.rs  main.rs  picking.rs  scale.rs  screenshot.rs  tests.rs
src/legend/: mod.rs  setup.rs
