[package]
name = "shu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
bevy_pancam = "0.7.0"
bevy_prototype_lyon = "0.7.1"
itertools = "0.10.5"
serde = "1.0.147"
serde_json = "1.0.88"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

