[project]
name = "ggshu"
version = "0.1.0"
description = "Grammar of Graphics for shu."
readme = "README.rst"
authors = [{name="carrascomj", email="carrascomurielj@gmail.com"}]
maintainers = [{name="carrascomj", email="carrascomurielj@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
  "pandas==1.5.2",
  "numpy==1.24.0"
]
classifiers = [
  "Programming Language :: Python :: 3"
]
[project.optional-dependencies]
dev = ["pytest==7.2.0", "black==22.10.0", "isort==5.10.1"]

[project.urls]
Homepage = "https://biosustain.github.io/shu/"
Documentation = "https://biosustain.github.io/shu/plotting.html"
Repository = "https://github.com/biosustain/shu.git"
