[project]
name = "ggshu"
version = "0.2.1"
description = "Grammar of Graphics for shu."
readme = "README.md"
authors = [{name="carrascomj", email="carrascomurielj@gmail.com"}]
maintainers = [{name="carrascomj", email="carrascomurielj@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "pandas==2.*",
    "numpy",
    "IPython==8.18.1",
    "requests>=2.32.3",
]
classifiers = [
  "Programming Language :: Python :: 3"
]
[project.optional-dependencies]
dev = ["pytest==7.2.0", "black==22.10.0", "isort==5.10.1"]

[project.urls]
Homepage = "https://biosustain.github.io/shu/"
Documentation = "https://biosustain.github.io/shu/plotting.html"
Repository = "https://github.com/biosustain/shu.git"
